adjust z-index for back to top button as it was covered by meet team images (fix)

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,7 @@ h1, h2, h3, h4, h5, h6{
   bottom: 20px;
   right: 20px;
   display: none;
+  z-index: 4;
 }
 
 /* header (nav bar) */
